force-app/main/default/objects/UMB_Product_Option__c/UMB_Product_Option__c.object-meta.xml
<CustomObject>
    <label>UpgradeMyBackyard Product Option</label>
    <nameField>
        <label>UpgradeMyBackyard Product Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UpgradeMyBackyard Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>