force-app/main/default/objects/UMB_Product_Option__c/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <label>Max Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>