force-app/main/default/objects/UMB_Product_Option__c/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>