force-app/main/default/objects/UMB_Product_Option__c/fields/Option_tier__c.field-meta.xml
<CustomField>
    <fullName>Option_tier__c</fullName>
    <label>Option Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Deluxe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>